# browser_timeliner

./: CONTRIBUTING.md  README.md  pyproject.toml
browser_timeliner/: __init__.py  analysis.py  anomaly_detector.py  categories.py  chromium_reader.py  cli.py  constants.py  domain_utils.py  exporter.py  firefox_reader.py  ingest.py  logging_config.py  models.py  preferences_parser.py  rule_engine.py  sessionizer.py  utils.py
browser_timeliner/rules/: __init__.py  default_rules.yaml
docs/: USAGE.md
tests/: test_analysis.py  test_anomaly_detector.py  test_chromium_reader.py  test_cli.py  test_exporter.py  test_firefox_reader.py  test_ingest.py  test_preferences_parser.py  test_rule_conditions.py  test_rule_engine.py  test_rule_validation.py  test_sessionizer.py
